Fix overflowing card-header when title is long

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -73,7 +73,7 @@ body {
   font-family: 'Lato', Georgia, Serif;
   font-weight: bold;
   display: grid;
-  grid-template-columns: [title] auto [buttons];
+  grid-template-columns: [title] minmax(0, 1fr) [buttons];
   align-items: center;
 }
 
@@ -111,22 +111,17 @@ body {
 .card-back {
   width: 100%;
   height: calc(100% - 29px);
+  background: rgba(235, 235, 235, 1);
   border-radius: 0 0 10px 10px;
   position: absolute;
   bottom: 0;
   font-family: 'Lato', Georgia, Serif;
 }
 
-.card-front {
-  background: rgba(40, 44, 52, 1);
-}
-
-
 .card-back {
-  background: rgba(232, 233, 233, 1);
   display: grid;
-  grid-template-columns: minmax(2rem, 1.2fr) minmax(5rem, 3fr);
-  grid-template-rows: 35px repeat(auto-fill, minmax(1.7rem, 1fr));
+  grid-template-columns: minmax(0, 1fr);
+  grid-template-rows: min-content;
   row-gap: 0.25rem;
 }
 
@@ -136,16 +131,25 @@ body {
   display: flex;
   align-items: center;
   column-gap: 5px;
+  height: fit-content;
 }
 
-.card-back .buttons:after {
+.card-back div.buttons::after {
   content: '';
   display: block;
   position: absolute;
-  margin: 0 auto 0 10%;
-  width: 80%;
-  padding-top: 35px;
+  /* margin: 0 auto 0 10%; */
+  width: 100%;
+  /* 80% */
+  padding-top: 28px;
   border-bottom: 0.5px solid rgba(0, 0, 0, 0.22);
+}
+
+.card-back .area {
+  grid-row: 2;
+  grid-column: 1 / 3;
+  width: 100%;
+  overflow-y: scroll;
 }
 
 .card-back button {
@@ -251,14 +255,16 @@ img.diff_icon {
 .list-component {
   color: rgba(30, 30, 30, 1);
   background: rgba(235, 235, 235, 1);
-  /* width: 100%; */
-  height: 100%;
   flex-grow: 1;
   text-indent: 5px;
   border-radius: 0px 0px 10px 10px;
   overflow: auto;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.card-front .list-component {
+  height: 100%;
 }
 
 .branch-ribbon-container {
